attempt to fix missing background images on heroku

--- a/app/assets/stylesheets/signin.css.scss
+++ b/app/assets/stylesheets/signin.css.scss
@@ -26,7 +26,7 @@
   padding: 0 10px 0 0;
   color: maroon;
   width: 350px;
-  background: url(image_path('quill.png')) top/75% no-repeat;
+  background: url(image-path('quill.png')) top/75% no-repeat;
   
   span > h2 {
     font-family: 'Marck Script', 'La Belle Aurore', cursive;
