--- a/app/assets/stylesheets/visage_codex.css.scss
+++ b/app/assets/stylesheets/visage_codex.css.scss
@@ -25,7 +25,7 @@ html:before {
   right: 0;
   bottom: 0;
   left: 0;
-  background: url(image_path('map.jpg')) top center;
+  background: url(image-path('map.jpg')) top center;
   opacity: 0.2;
 }
 
